--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Nunito+Sans:ital,opsz,wght@1,6..12,500&family=Poppins:wght@600&family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
-        <input type="text" id="input-el">
+        <h1 style="text-align: center; justify-content: center;">Welcome To Lead Tracker!</h1>
+        <input type="text" id="input-el" placeholder="Enter Website Url to save leads">
         <button id="input-btn">SAVE INPUT</button>
         <button id="tab-btn">SAVE TAB</button>
         <button id="delete-btn">DELETE ALL</button>
