--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1 style="text-align: center; justify-content: center;">Welcome To Lead Tracker!</h1>
+        <p><img src="" alt=""></p>
         <input type="text" id="input-el" placeholder="Enter Website Url to save leads">
         <button id="input-btn">SAVE INPUT</button>
         <button id="tab-btn">SAVE TAB</button>
