--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Nunito+Sans:ital,opsz,wght@1,6..12,500&family=Poppins:wght@600&family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 style="text-align: center; justify-content: center;">Welcome To Lead Tracker!</h1>
-        <p><img src="" alt=""></p>
+        <div class="first"><div style="display: inline;" id="img-f"><img src="icon.png" alt="Error Loading Image" width="30px" height="30px"></div>
+        <h1 style="text-align: center; justify-content: center;">Welcome To Lead Tracker!</h1></div>
+        
         <input type="text" id="input-el" placeholder="Enter Website Url to save leads">
         <button id="input-btn">SAVE INPUT</button>
         <button id="tab-btn">SAVE TAB</button>
