--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <div class="first"><div style="display: inline;" id="img-f"><img src="icon.png" alt="Error Loading Image" width="30px" height="30px"></div>
-        <h1 style="text-align: center; justify-content: center;">Welcome To Lead Tracker!</h1></div>
+        <div class="second"><h1 id="m-heading">Welcome To Lead Tracker!</h1></div>
+        </div>
         
         <input type="text" id="input-el" placeholder="Enter Website Url to save leads">
         <button id="input-btn">SAVE INPUT</button>
